# ImageCompressor2

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
image_compressor/: .gitignore  Cargo.toml  README.md
image_compressor/src/: compressor.rs  crawler.rs  lib.rs
src/: file_io.rs  lib.rs  main.rs
src/image_compressor/src/: compressor.rs  crawler.rs  lib.rs
zip_archive/: Cargo.toml
zip_archive/src/: lib.rs
zip_compressor/: Cargo.toml
zip_compressor/src/: lib.rs
