[package]
name = "ImageCompressor"
description = "GUI Program for image_compressor library"
version = "1.2.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
eframe = "0.17.0"
egui = "0.17.0"
rfd = "0.8.1"
serde = { version = "1.0.136", default-features = false, features = ["derive"]}
serde_json = "1.0.79"
atomic_refcell = "0.1.8"
image_compressor = "1.5.2"
zip_archive = "1.2.2"