[package]
name = "zip_archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.8"
crossbeam-queue = "0.3.5"
image_compressor = {path = "../image_compressor"}

[dev-dependencies]
fs_extra = "1.2.0"